--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -102,19 +102,19 @@
 
 <p>Para acessar o Backoffice do Checkout Cielo, é necessário que o lojista <strong><a href="https://www.cielo.com.br/minha-conta">realize login no Site Cielo</a></strong>, inserindo sua Afiliação (Nº de estabelecimento) e Usuário:</p>
 
-<p><img src="/images/checkout-login.png" alt="Login Backoffice Cielo" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-login.png" alt="Login Backoffice Cielo" /></p>
 
 <p>Em seguida é necessário incluir sua Senha:</p>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-login-senha.png" alt="Senha Backoffice Cielo" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/Checkout/TutorialCheckout/checkout-login-senha.png" alt="Senha Backoffice Cielo" /></p>
 
 <p>Na área de “Vendas Online” basta clicar em Checkout Cielo.</p>
 
-<p><img src="/images/checkout-vendas-online.png" alt="Vendas online" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-vendas-online.png" alt="Vendas online" /></p>
 
 <p>Caso o site principal da Cielo não esteja disponível, basta acessar a URL <a href="https://cieloecommerce.cielo.com.br/backoffice">https://cieloecommerce.cielo.com.br/backoffice</a> e inserir seu e-mail de cadastro e senha.</p>
 
-<p><a href="/images/checkout-cielo.png">!Checkout Cielo</a></p>
+<p><a href="/images/Checkout/TutorialCheckout/checkout-cielo.png">!Checkout Cielo</a></p>
 
 <h2 id="páginas-do-backoffice-cielo">Páginas do Backoffice Cielo</h2>
 
@@ -168,7 +168,7 @@
   <li><strong>Volume financeiro e transacional</strong> - São gráficos interativos que demonstram em porcentagem ( e em valores totais) qual a participação de cada meio de pagamento no total de transações realizadas e o volume total de acordo com o status das transações.</li>
 </ul>
 
-<p><img src="/images/checkout-dashboard.png" alt="DashBoard" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-dashboard.png" alt="DashBoard" /></p>
 
 <h2 id="aba-pedidos">Aba Pedidos</h2>
 
@@ -176,7 +176,7 @@
 
 <p>O resultado da pesquisa é exposta em forma de uma listagem  de operações. Essa listagem pode ser exportada como forma de excel.</p>
 
-<p><img src="/images/checkout-pedidos.png" alt="Pedidos" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-pedidos.png" alt="Pedidos" /></p>
 
 <h2 id="aba-produtos">Aba Produtos</h2>
 
@@ -186,11 +186,11 @@
 
 <h3 id="listar-produtos-cadastrados">Listar Produtos Cadastrados</h3>
 
-<p><img src="/images/checkout-listar-produtos.png" alt="Produtos cadastrados" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-listar-produtos.png" alt="Produtos cadastrados" /></p>
 
 <p>Clicando no Titulo ou SKU do produto, você será redirecionado a página de informações de Produto, onde todas as caracteristicas do produto são informadas e onde você pode definir o padrão do Botão (caso a sua integração seja com base no Botão Checkout Cielo) a ser usado na venda desse produto. A integração via Botão é melhor explicada no item <a href="#uso-do-botão-checkout-cielo-comprar">Uso do botão Checkout Cielo “Comprar“</a>.</p>
 
-<p><img src="/images/checkout-detalhes-produto.png" alt="Detalhes do produto" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-detalhes-produto.png" alt="Detalhes do produto" /></p>
 
 <h3 id="cadastrar-de-produtos">Cadastrar de Produtos</h3>
 
@@ -202,7 +202,7 @@
   <li><strong>Serviço</strong> – Serviços a serem prestados. Ex:  Entrega delivery, projetos e orçamentos.</li>
 </ul>
 
-<p><img src="/images/checkout-cadastrar-produtos.png" alt="Cadastrar produtos" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cadastrar-produtos.png" alt="Cadastrar produtos" /></p>
 
 <aside class="notice">Material Fisico exige que um <strong>tipo de frete</strong> seja cadastrado. </aside>
 
@@ -220,7 +220,7 @@
 
 <p>Esse relatorio apresenta as vendas pagas em um determinado periodo de tempo, sendo separadas por meio de pagamento. Selecionando o periodo e  tipo de pagamento, após pressionar “Buscar” o resultado será apresentado.</p>
 
-<p><img src="/images/checkout-relatorio-financeiro.png" alt="Relatório financeiro" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-financeiro.png" alt="Relatório financeiro" /></p>
 
 <h3 id="relatório-detalhado-de-vendas">Relatório detalhado de vendas.</h3>
 
@@ -228,7 +228,7 @@
 
 <aside class="notice">Pedidos realizados no <strong>Modo de teste</strong> não são apresentados nesse relatório, mesmo que estejam com o status “PAGO”</aside>
 
-<p><img src="/images/checkout-relatorio-detalhado-vendas.png" alt="Relatório detalhado de vendas" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-detalhado-vendas.png" alt="Relatório detalhado de vendas" /></p>
 
 <h3 id="listagem-de-clientes">Listagem de clientes</h3>
 
@@ -254,17 +254,17 @@
 
 <p>A lista do valor cobrado pelos serviços oferecidos pela Cielo será apresentada neste relatório. Todos os dados dos planos e custos transacionais serão apresentados aqui:</p>
 
-<p><img src="/images/checkout-extrato-cobranca.png" alt="Extrato de cobrança" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-extrato-cobranca.png" alt="Extrato de cobrança" /></p>
 
 <h3 id="relatório-de-recorrência">Relatório de Recorrência</h3>
 
 <p>Nesse relatório é possível pesquisar o conjunto de recorrência e suas transações com base em seu ID ou por Status / Intervalo de ocorrência.</p>
 
-<p><img src="/images/checkout-relatorio-recorrencia.png" alt="Relatório de Recorrências" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-recorrencia.png" alt="Relatório de Recorrências" /></p>
 
 <p>Ao clicar no “+” é aberto a tela de Detalhes da recorrência:</p>
 
-<p><img src="/images/checkout-detalhes-da-recorrencia.png" alt="Detalhes da Recorrência" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-detalhes-da-recorrencia.png" alt="Detalhes da Recorrência" /></p>
 
 <p>Os Detalhes da recorrência informam o carrinho e o histórico de transações agendadas. Ao clicar em “+Detalhes” o lojista é direcionado a tela de detalhes de Pedidos (Ver item “PEDIDOS”)</p>
 
@@ -272,7 +272,7 @@
 
 <p>Nesta página constam os manuais do Checkout Cielo, assim como a pagina de FAQ e de “Duvidas”, onde o lojista pode entrar em contato com a equipe de suporte Checkout Cielo.</p>
 
-<p><img src="/images/checkout-suporte.png" alt="Dúvidas" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-suporte.png" alt="Dúvidas" /></p>
 
 <p>Nessa pagina é possivel entrar em contato a respeito de duvidas Operacionais, tecnicas e Comerciais  e ter acesso aos documentos técnicos e de suporte do Checkout Cielo.</p>
 
@@ -290,7 +290,7 @@
 
 <p>Aqui é possivel alterar o logo do meio de pagamento disponível em sua loja e a cor de fundo do site via o uso da caixa de opções ou digitando o código relativo a cor escolhida (As cores estão no padrão RGB).</p>
 
-<p><img src="/images/checkout-configuracoes-loja.png" alt="Configuração Exibição" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-configuracoes-loja.png" alt="Configuração Exibição" /></p>
 
 <aside class="notice">O logo de sua loja será exibido na tela de Checkout centralizado.</aside>
 
@@ -298,7 +298,7 @@
 
 <p>Nesta tela é possivel alterar as configurações dos meios de pagamento disponiveis em sua loja , os definindo como ativos ou não, e configurar a URL de retorno, notificação e Mudança de Status.</p>
 
-<p><img src="/images/checkout-configuracoes-pagamento.png" alt="Configuração Exibição" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-configuracoes-pagamento.png" alt="Configuração Exibição" /></p>
 
 <h3 id="cartões-de-crédito-e-parcelamento">Cartões de crédito e Parcelamento</h3>
 
@@ -326,7 +326,7 @@
 
 <p>Na tela de pedidos, dentro de cada transação, há a opção de reenvio do POST de mudança de status.  Basta clicar nos botões azuis, marcados na imagem abaixo:</p>
 
-<p><img src="/images/checkout-detalhe-pedidos.png" alt="Detalhes do pedido" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-detalhe-pedidos.png" alt="Detalhes do pedido" /></p>
 
 <aside class="notice">Os Lojistas da “Loja Virtual Terra Cielo” possuem URL’s de notificação, mudança de Status e Retorno atualizadas automaticamente. Para esses lojistas, não é necessário alterar as URL’s citadas.</aside>
 
@@ -353,11 +353,11 @@
 
 <aside class="notice">Se o lojista não tem habilitado o antifraude em seu contrato junto a Cielo ou não enviar no POST a solicitação de analise de fraude, a captura automática não será executada caso esteja configurada para ser efetuada com base no status da analise de risco. Caberá ao lojista a captura manual do pedido.</aside>
 
-<p><img src="/images/checkout-anti-fraude.png" alt="Anti fraude" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-anti-fraude.png" alt="Anti fraude" /></p>
 
 <p>Campo valor mínimo de analise AF:</p>
 
-<p><img src="/images/checkout-anti-fraude-valor-minimo.png" alt="Valor mínimo anti fraude" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-anti-fraude-valor-minimo.png" alt="Valor mínimo anti fraude" /></p>
 
 <h4 id="tabela-de-status-do-antifraude">Tabela de status do Antifraude</h4>
 
@@ -420,25 +420,25 @@
 
 <p>Você pode visualizar o status do antifraude acessando o detalhe da compra, na aba Pedidos e clicando no (+)</p>
 
-<p><img src="/images/checkout-status-antifraude.png" alt="Status Antifraude" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-status-antifraude.png" alt="Status Antifraude" /></p>
 
 <h3 id="frete-de-correios--serviços">Frete de Correios &amp; Serviços</h3>
 
 <p>Nesta área você configura as opções de frete disponiveis em sua Loja. Na seção <a href="#informações-sobre-frete">Informações sobre Frete</a> há uma explicação mais detalhada sobre os tipos de fretes disponiveis no Checkout Cielo. Há tambem na área de fretes de Correiros, uma calculadora de frete para consultas (essa calculadora dá o valor de frete de cada tipo de frete cadastrado para um determinado peso e localidade)</p>
 
-<p><img src="/images/checkout-frete-correios.png" alt="Frete Correios" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-frete-correios.png" alt="Frete Correios" /></p>
 
 <h3 id="dados-cadastrais">Dados Cadastrais</h3>
 
 <p>Nesta seção, ficam listados os dados da loja cadastrada e do Lojista.</p>
 
-<p><img src="/images/checkout-dados-cadastrais.png" alt="Dados cadastrais" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-dados-cadastrais.png" alt="Dados cadastrais" /></p>
 
 <h3 id="alterar-sua-senha">Alterar sua Senha</h3>
 
 <p>Aqui é possivel alterar a senha de acesso ao Checkout Cielo.</p>
 
-<p><img src="/images/checkout-alterar-senha.png" alt="Alterar senha" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-alterar-senha.png" alt="Alterar senha" /></p>
 
 <h1 id="tutorial-botão-checkout-cielo">Tutorial Botão Checkout Cielo</h1>
 
@@ -618,7 +618,7 @@ Versão atual do Checkout Cielo possui suporte aos seguintes meios de pagamento:
 
 <p>Cabe ao lojista através de uma Conciliação Manual com seu extrato bancário, confirmar o pagamento do mesmo.</p>
 
-<p><img src="/images/checkout-cielo-conciliar-boleto.png" alt="Conciliando um boleto" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-conciliar-boleto.png" alt="Conciliando um boleto" /></p>
 
 <p>Para realizar a Conciliação você deve:</p>
 
@@ -646,13 +646,13 @@ O Comprador também verá o pedido como PAGO no “Backoffice do Comprador”</p
 
 <p>Se o boleto não for conciliado dentro de um prazo de 10 dias após seu vencimento, seu Status será alterado para “EXPIRADO”, para um melhor controle dos boletos vencidos. Boletos EXPIRADOS podem ser conciliados.</p>
 
-<p><img src="/images/checkout-cielo-boleto.png" alt="Boleto" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-boleto.png" alt="Boleto" /></p>
 
 <aside class="notice">Validade do Boleto – Caso o boleto expire em um dia não útil, como Sábado, ele será valido até o próximo dia útil.</aside>
 
 <h3 id="fluxo-de-dados-do-boleto">Fluxo de dados do Boleto</h3>
 
-<p><img src="/images/checkout-fluxo-boleto.png" alt="Fluxo Boleto" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-fluxo-boleto.png" alt="Fluxo Boleto" /></p>
 
 <h2 id="cartão-de-crédito">Cartão de Crédito</h2>
 
@@ -668,7 +668,7 @@ O Comprador também verá o pedido como PAGO no “Backoffice do Comprador”</p
 
 <p>Esta análise indicará um <strong>“BAIXO RISCO”</strong> ou “ALTO RISCO” para a venda em questão. Esta sugestão é o que deve guiar a decisão de se confirmar  ou cancelar a venda. A analise será apresentada no “Detalhes do Pedido”, como abaixo:</p>
 
-<p><img src="/images/checkout-cielo-analise-risco.png" alt="Análise de risco" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-analise-risco.png" alt="Análise de risco" /></p>
 
 <h2 id="recorrência-de-crédito-no-checkout-cielo">Recorrência de Crédito no Checkout Cielo</h2>
 
@@ -709,7 +709,7 @@ A primeira transação da recorrência é uma transação normal, seguindo as re
 <p>Uma maneira de realizar a recorrência dentro do Checkout é criar um botão recorrente.
 Basta cadastrar o produto, incluindo um intervalo de cobrança e uma data para encerramento (Opcional), como no exemplo abaixo:</p>
 
-<p><img src="/images/checkout-botao-recorrencia.png" alt="Botão Recorrência" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-botao-recorrencia.png" alt="Botão Recorrência" /></p>
 
 <aside class="warning">Caso um botão seja utilizado após a “Data final” cadastrada, a transação apresentará um erro exibindo “Oppss” na tela transacional. Data pode ser editada na tela de edição do botão dentro de “Detalhes do Produto”</aside>
 
@@ -717,11 +717,11 @@ Basta cadastrar o produto, incluindo um intervalo de cobrança e uma data para e
 
 <p>O cancelamento da recorrência ocorre dentro do Backoffice do Checkout Cielo, na Aba Pedidos.  Basta acessar uma transação de recorrência (marcada com o símbolo “Recorrente”), entrar em detalhes (o símbolo de “+”)</p>
 
-<p><img src="/images/checkout-minhas-vendas.png" alt="Minhas vendas" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-minhas-vendas.png" alt="Minhas vendas" /></p>
 
 <p>Selecione uma das duas opções abaixo:</p>
 
-<p><img src="/images/checkout-cancelar-recorrencia.png" alt="Cancelar Recorrência" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cancelar-recorrencia.png" alt="Cancelar Recorrência" /></p>
 
 <p>Tipos de Cancelamento:</p>
 
@@ -737,7 +737,7 @@ Basta cadastrar o produto, incluindo um intervalo de cobrança e uma data para e
 
 <h3 id="fluxo-do-cartão-de-crédito">Fluxo do Cartão de Crédito</h3>
 
-<p><img src="/images/checkout-fluxo-credito.png" alt="Fluxo de crédito" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-fluxo-credito.png" alt="Fluxo de crédito" /></p>
 
 <h2 id="cartão-de-débito">Cartão de débito</h2>
 
@@ -776,7 +776,7 @@ Basta cadastrar o produto, incluindo um intervalo de cobrança e uma data para e
 
 <h3 id="fluxo-débito-online">Fluxo Débito Online</h3>
 
-<p><img src="/images/checkout-fluxo-debito.png" alt="Fluxo Débito Online" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-fluxo-debito.png" alt="Fluxo Débito Online" /></p>
 
 <h2 id="diferença-entre-estorno-e-cancelamento">Diferença entre estorno e cancelamento</h2>
 
@@ -793,17 +793,17 @@ Basta cadastrar o produto, incluindo um intervalo de cobrança e uma data para e
 
 <p>As vendas <strong>“AUTORIZADAS”</strong>, e com <strong>“BAIXO RISCO”</strong> na ferramenta de  antifraude poderão ser <strong>CAPTURADAS</strong> automaticamente pelo sistema. Para isso é preciso configurar no o <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a>. Após essa configuração, o status apresentado será <strong>“PAGO”</strong>. Esta venda será então confirmada (capturada) na Cielo.</p>
 
-<p><img src="/images/checkout-cielo-cancelamento-captura-automatico.png" alt="Cancelamento e captura automático" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-cancelamento-captura-automatico.png" alt="Cancelamento e captura automático" /></p>
 
 <h3 id="cancelamento-automático">Cancelamento Automático</h3>
 
 <p>As vendas “AUTORIZADAS”, e com “ALTO RISCO”  na ferramenta de  antifraude poderão ser CANCELADAS automaticamente pelo sistema. Para isso é preciso configurar no o <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a>. Após essa configuração, o status apresentado será “CANCELADO”. Esta venda será então cancelada (desfeita) na Cielo.</p>
 
-<p><img src="/images/checkout-cielo-cancelamento-captura-automatico.png" alt="Cancelamento e captura automático" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-cancelamento-captura-automatico.png" alt="Cancelamento e captura automático" /></p>
 
 <aside class="warning">Atenção! Você tem a opção de escolher a melhor integração para o seu negócio, a captura/cancelamento manual ou automático é feito diretamente pelo seu Backoffice.</aside>
 
-<p><img src="/images/checkout-cielo-anti-fraude-cancelamento-captura.png" alt="Cancelamento e captura automáticos" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-anti-fraude-cancelamento-captura.png" alt="Cancelamento e captura automáticos" /></p>
 
 <h2 id="capturacancelamento-manual">Captura/Cancelamento manual</h2>
 
@@ -831,11 +831,11 @@ Basta cadastrar o produto, incluindo um intervalo de cobrança e uma data para e
 
 <p>O consumidor (comprador) pode por algum motivo cancelar a compra diretamente com o banco emissor do cartão de crédito. Caso isso ocorra  o lojista receberá da Cielo um aviso de Chargeback de “Não Reconhecimento de compra” ou caso tenha havido uma compra com cartão fraudado, você recebera um aviso de Chargeback por “Fraude”.</p>
 
-<p><img src="/images/checkout-cielo-chargeback.png" alt="Chargeback" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cielo-chargeback.png" alt="Chargeback" /></p>
 
 <p>Essa comunicação não é feita via o <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a>, mas sim pelo extrato de venda da Cielo, destacada como um ajuste financeiro. O extrato de vendas está disponivel no site da Cielo <a href="https://www.cielo.com.br/minha-conta">www.cielo.com.br na aba “Acessar Minha conta”</a>.</p>
 
-<p><img src="/images/acessar-minha-conta.png" alt="Acessar minha conta" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/acessar-minha-conta.png" alt="Acessar minha conta" /></p>
 
 <p>Após esse recebimento, no próprio site da Cielo  é possivel acessar o <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a> e sinalizar o pedido como tendo recebido um Chargeback, pra seu melhor controle. Basta entrar no Detalhe do Pedido e clicar no botão “ChargeBack”, e seu status passará a ser “CHARGEBACK”.</p>
 
