--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -157,7 +157,7 @@
 
 <h2 id="aba-dashboard">Aba DashBoard</h2>
 
-<p>Pagina inicial onde são apresentadas informações sobre a sua conta e sobre o volume e tipo de transações que sua loja vem realizando via o Checkout Cielo.</p>
+<p>Aba inicial onde são apresentadas informações sobre a sua conta e sobre o volume e tipo de transações que sua loja vem realizando via o Checkout Cielo.</p>
 
 <h3 id="tipos-de-informações">Tipos de informações</h3>
 
@@ -168,21 +168,26 @@
   <li><strong>Volume financeiro e transacional</strong> - São gráficos interativos que demonstram em porcentagem e em valores totais, qual a participação de cada meio de pagamento no total de transações realizadas e o volume total de acordo com o status das transações.</li>
 </ul>
 
-<aside class="warning">Por padrão, o valor .</aside>
+<aside class="warning">Por padrão, transações de crédito expiram em 15 dias. Após esse perido, elas não podem ser capturadas.</aside>
 
 <p><img src="/images/Checkout/TutorialCheckout/checkout-dashboard.png" alt="DashBoard" /></p>
 
 <h2 id="aba-pedidos">Aba Pedidos</h2>
 
-<p>Nessa pagina fica contida toda a listagem de transações realizadas por um determinado periodo de tempo no Checkout Cielo. Nessa pagina é possivel pesquisar um determinado pedido , via a colocação de um determinado parametro de busca nos campos la existentes ou desmarcando os “checkbox” dos “Meios de pagamento” ou “Status de pagamento” e apertando o botão “Buscar”.</p>
+<p>Nessa aba fica contida toda a listagem de transações realizadas no Checkout Cielo. Aqui é possivel pesquisar um determinado pedido, via um determinado parametro de busca nos campos ou desmarcando os “checkbox” dos “Meios de pagamento” ou “Status de pagamento” e apertando o botão “Buscar”.
+O resultado da pesquisa é exposto em forma de uma listagem de transações que pode ser exportada como uma planilha de Excel.</p>
 
-<p>O resultado da pesquisa é exposta em forma de uma listagem  de operações. Essa listagem pode ser exportada como forma de excel.</p>
+<p>Listagem de Pedidos</p>
 
 <p><img src="/images/Checkout/TutorialCheckout/checkout-pedidos.png" alt="Pedidos" /></p>
 
-<h2 id="aba-produtos">Aba Produtos</h2>
+<p>Detalhes dos Pedidos</p>
 
-<p>Nessa pagina são listados todos os produtos cadastrados no Checkout Cielo. Tambem é possivel fazer uma busca pelo nome do produto nesta pagina.  A lista de produtos pode ser exportada no formato Excel.</p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-pedidos-detalhes.png" alt="Detalhes do Pedido" /></p>
+
+<h2 id="aba-link-de-pagamento">Aba Link de Pagamento</h2>
+
+<p>Nessa Aba são listados todos os produtos cadastrados no Checkout Cielo. Tambem é possivel fazer uma busca pelo nome do produto nesta pagina.  A lista de produtos pode ser exportada no formato Excel.</p>
 
 <p>No menu Produtos, há também outras duas áreas: <strong>Cadastrar de produtos</strong> e <strong>Listar Produtos Cadastrados</strong>.</p>
 
