--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -137,7 +137,7 @@
       <td>Nessa pagina fica contida toda a listagem de transações realizadas no Checkout Cielo. Aqui é possivel pesquisar um determinado pedido ou transação.</td>
     </tr>
     <tr>
-      <td><em>Link de Pagamentos</em></td>
+      <td><strong>Link de Pagamentos</strong></td>
       <td>Nessa pagina são listados todos os Botões/Links cadastrados no Checkout Cielo</td>
     </tr>
     <tr>
