--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -191,7 +191,7 @@ O resultado da pesquisa é exposto em forma de uma listagem de transações que 
 
 <p>No menu Produtos, há também outras duas áreas: <strong>Cadastrar de produtos</strong> e <strong>Listar Produtos Cadastrados</strong>.</p>
 
-<h3 id="listar-produtos-cadastrados">Listar Produtos Cadastrados</h3>
+<h3 id="listar-link-de-pagamentos-cadastrados">Listar Link de pagamentos Cadastrados</h3>
 
 <p><img src="/images/Checkout/TutorialCheckout/checkout-listar-link-de-pagamentos.png" alt="Produtos cadastrados" /></p>
 
@@ -199,7 +199,7 @@ O resultado da pesquisa é exposto em forma de uma listagem de transações que 
 
 <p><img src="/images/Checkout/TutorialCheckout/checkout-detalhes-Link-de-pagamentos.png" alt="Detalhes do produto" /></p>
 
-<h3 id="cadastrar-de-produtos">Cadastrar de Produtos</h3>
+<h3 id="cadastrar-de-link-de-pagamentos">Cadastrar de Link de Pagamentos</h3>
 
 <p>Nessa pagina é possivel cadastrar seus produtos com base no tipo de produto em si. O Checkout Cielo considera 3 tipos de produtos: Material Fisico, Digital e  Serviço.</p>
 
