--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -207,9 +207,11 @@ O resultado da pesquisa é exposto em forma de uma listagem de transações que 
   <li><strong>Material Fisico</strong> – Produtos Fisicos que necessitam ser enviados pelos lojistas. Ex: Roupas, Brinquedos, etc.</li>
   <li><strong>Digital</strong> –  Bens digitais vendidos pela internet. Ex: Software, Jogos, Musicas, etc.</li>
   <li><strong>Serviço</strong> – Serviços a serem prestados. Ex:  Entrega delivery, projetos e orçamentos.</li>
+  <li><strong>Recorrência</strong> - Transações que se repetem em um determinado intervalo de tempo EX: Assinaturas, mensalidades etc</li>
+  <li><strong>Pagamentos</strong> - Pagamentos unicos ou transferência de valores Ex: quitação de dividas etc</li>
 </ul>
 
-<p><img src="/images/Checkout/TutorialCheckout/checkout-cadastrar-produtos.png" alt="Cadastrar produtos" /></p>
+<p><img src="/images/Checkout/TutorialCheckout/checkout-cadastrar-link-de-pagamentos.png" alt="Cadastrar Link de pagamentos" /></p>
 
 <aside class="notice">Material Fisico exige que um <strong>tipo de frete</strong> seja cadastrado. </aside>
 
