--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -1882,7 +1882,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   </tbody>
 </table>
 
-<p>Adicionando o botão na sua página HTML você deve copiar o código HTML do botão criado e colocar no código HTML do seu site, conforme o exemplo abaixo.</p>
+<p>Adicionando o botão na sua página, você deve copiar o código HTML do botão criado e inclui-lo no HTML de seu site, conforme o exemplo abaixo.</p>
 
 <aside class="notice">O código deve ser inserido dentro da área adequada no seu HTML.</aside>
 
