--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -187,6 +187,16 @@
   <li>Pagamento com NFC (LIO V2)</li>
 </ul>
 
+<h1 id="desenvolva-um-app">Desenvolva um APP</h1>
+
+<h1 id="integração-remota">Integração remota</h1>
+
+<h1 id="integração-local">Integração Local</h1>
+
+<h1 id="cielo-store">Cielo Store</h1>
+
+<h1 id="referências">Referências</h1>
+
 </div>
 
 
