--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -680,7 +680,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   </tbody>
 </table>
 
-<p><strong>Fluxo do Link de Pagamento</strong></p>
+<h4 id="fluxo-do-link-de-pagamento">Fluxo do Link de Pagamento</h4>
 
 <p><img src="/images/Checkout/intbt.png" alt="Fluxo de integração Checkout Cielo Botão" /></p>
 
@@ -805,6 +805,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
 
 <p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter a compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a>, e valerão os dados do cadastro.</p>
 
+
 </div>
 
 
@@ -840,7 +841,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
       <ul class="toc-footer">
         
-        <li><a href='https://developercielo.github.io/manual/checkout-cielo'>Integração com Checkout Cielo</a></li>
+        <li><a href='/Checkout-Cielo/'>Integração com Checkout Cielo</a></li>
         
       </ul>
     </div>
