--- a/index.html
+++ b/index.html
@@ -33,13 +33,5 @@ title: Home
 </div>
 
 <div class="home-footer">
-    <div class="footer-conteudo">
-        <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
-            <img src="{{ site.baseurl }}/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Precisa de ajuda?">
-        </div>
-        <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
-            <h2>Precisa de ajuda?</h2>
-            <p>Se você não conseguiu encontrar sua resposta acima, <a href="#">entre em contato conosco</a> ou <a href="#">consulte nosso FAQ.</a></p>
-        </div>
-    </div>
+    {% include footer.html %}
 </div>
